// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HRMP > Acala handles horizonal messages > system events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": "(rounded 2000)",
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`HRMP > Statemine handles horizonal messages > system events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": "(rounded 7200)",
        "refTime": "(rounded 300000000)",
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`HRMP > Statemine handles horizonal messages block#5,800,000 > system events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": "(rounded 3600)",
        "refTime": "(rounded 310000000)",
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;
